Seed the first table
Former-commit-id: 1c7c4d1d25d02a4425f72dce09bfd8836f883ffe